--- a/themes/anzhiyu/layout/includes/header/nav.pug
+++ b/themes/anzhiyu/layout/includes/header/nav.pug
@@ -28,10 +28,11 @@ nav#nav
       !=partial('includes/header/menu_item', {}, {cache: true})
     #nav-right
       if theme.nav.travelling
-        .nav-button.only-home#travellings_button(title='随机前往一个开往项目网站')
-          a.site-page(onclick='anzhiyu.totraveling()', title='随机前往一个开往项目网站', href='javascript:void(0);', rel='external nofollow', data-pjax-state='external')
+        .nav-button.only-home#travellings_button(title='随机前往一个项目网站')
+          a.site-page(onclick='anzhiyu.totraveling()', title='随机前往一个项目网站', href='javascript:void(0);', rel='external nofollow', data-pjax-state='external')
             i.anzhiyufont.anzhiyu-icon-train
       .nav-button#randomPost_button
+      .nav-button.only-home#travellings_button(title='随机前往一个文章')
         a.site-page(onclick='toRandomPost()', title='随机前往一个文章', href='javascript:void(0);')
           i.anzhiyufont.anzhiyu-icon-dice
       if (theme.algolia_search.enable || theme.local_search.enable || theme.docsearch.enable)
@@ -41,6 +42,7 @@ nav#nav
             span=' '+_p('search.title')
 
       if theme.centerConsole.enable
+      .nav-button.only-home#travellings_button(title='中控台')
         input#center-console(type="checkbox")
         label.widget(for="center-console" title=_p("中控台") onclick="anzhiyu.switchConsole();")
           i.left
