--- a/themes/anzhiyu/layout/includes/header/nav.pug
+++ b/themes/anzhiyu/layout/includes/header/nav.pug
@@ -36,7 +36,9 @@ nav#nav
         a.site-page(onclick='toRandomPost()', title='随机前往一个文章', href='javascript:void(0);')
           i.anzhiyufont.anzhiyu-icon-dice
       if (theme.algolia_search.enable || theme.local_search.enable || theme.docsearch.enable)
+      .nav-button.only-home#travellings_button(title='搜索')
         div.nav-button#search-button
+        
           a.site-page.social-icon.search(href='javascript:void(0);', title='搜索🔍' accesskey="s")
             i.anzhiyufont.anzhiyu-icon-magnifying-glass
             span=' '+_p('search.title')
